--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-async-handler": "^1.2.0",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "react-router-dom": "^6.4.0"
   }
 }
