--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-router": "^0.0.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
